increased max permsize for build